--- a/ocean_plugin.csproj
+++ b/ocean_plugin.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ModuleAttribute.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PercentileClipNormalization.cs" />
     <Compile Include="StructureTensor.cs" />
   </ItemGroup>
   <ItemGroup>
